[Mantaflow] mesh generation does not account for some particles #76697

Closed
opened 2020-05-12 18:47:37 +02:00 by Pavel Blend · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: AMD Radeon HD 7560D ATI Technologies Inc. 4.5.13399 Core Profile Context 15.201.1151.1008

Blender Version
Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-05-11 19:18, hash: 8956e9e5f6
Worked: (newest version of Blender that worked as expected)

Short description of error
The mesh is not generated in areas that are in contact with the walls of the domain.
mantaflow_mesh_test.jpg

Exact steps for others to reproduce the error
mantaflow_test_mesh.zip

  • Open file
  • Bake the liquid
  • Set Physics properties > Mesh > Upres Factor = 6
  • Bake the mesh

Particles don't fit in mesh. This doesn't happen if Physics properties > Mesh > Upres Factor = 1

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: AMD Radeon HD 7560D ATI Technologies Inc. 4.5.13399 Core Profile Context 15.201.1151.1008 **Blender Version** Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-05-11 19:18, hash: `8956e9e5f6` Worked: (newest version of Blender that worked as expected) **Short description of error** The mesh is not generated in areas that are in contact with the walls of the domain. ![mantaflow_mesh_test.jpg](https://archive.blender.org/developer/F8531117/mantaflow_mesh_test.jpg) **Exact steps for others to reproduce the error** [mantaflow_test_mesh.zip](https://archive.blender.org/developer/F8531116/mantaflow_test_mesh.zip) - Open file - Bake the liquid - Set Physics properties > Mesh > Upres Factor = 6 - Bake the mesh Particles don't fit in mesh. This doesn't happen if Physics properties > Mesh > Upres Factor = 1
Author

Added subscriber: @Pavel_Blend

Added subscriber: @Pavel_Blend
Member

Added subscriber: @sebbas

Added subscriber: @sebbas

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I can not confirm this in older or newer Blender version.

Please click on File > Defaults > Load Factory Settings and check if that will resolve this issue. Just make sure you re-bake particles and mesh.

I think I can see this effect with default cube afrer running quick liquid, but I am not sure if this is bug.

Edit after quich testing It seems that increasing Mesh Upres Factor will "offset" the mesh.

I can not confirm this in older or newer Blender version. Please click on File > Defaults > Load Factory Settings and check if that will resolve this issue. Just make sure you re-bake particles and mesh. I think I can see this effect with default cube afrer running quick liquid, but I am not sure if this is bug. Edit after quich testing It seems that increasing Mesh Upres Factor will "offset" the mesh.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

This issue was referenced by 0c20fce2f2

This issue was referenced by 0c20fce2f2bf3ef8ebca8bc20d676a1d65d5203d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastián Barschkis self-assigned this 2020-05-19 16:03:22 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76697
No description provided.