Fix T76697: [Mantaflow] mesh generation does not account for some particles

Adapted mesh generation to account for domains with disabled fractionstoo.